# seatlib

./: .flake8  .gitignore  README.md  areas.yml  daemon.sh  prefs.yml  pyproject.toml  seatlib.py  wrapper.py
config/: areas.yml  hates.yml  prefs.yml
tests/: test_config.py
